tests/reference/asr-test_dict8-d960ce0.stderr
semantic error: 'dict' key type cannot be float/complex because resolving collisions by exact comparison of float/complex values will result in unexpected behaviours. In addition fuzzy equality checks with a certain tolerance does not follow transitivity with float/complex values.
 --> tests/errors/test_dict8.py:4:8
  |
4 |     d: dict[f64, f64] = {}
  |        ^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
